@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=180
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDD_DCI_COLLECTION
+Resource2=IDD_SET_PASSWORD
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_USER_PROPERTIES
-Resource5=IDA_DATA_VIEW
+Resource4=IDD_NEW_USER
+Resource5=IDA_SCRIPT_MANAGER
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_CHANGE_IP
+Resource6=IDD_OBJTOOL_OPTIONS
 Class11=CProgressDialog
-Resource7=IDD_OBJECT_COND_DATA
+Resource7=IDD_OBJECT_COND_SCRIPT
 Class12=CObjectBrowser
-Resource8=IDA_EVENT_EDITOR
+Resource8=IDA_NETMAP
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDA_LAST_VALUES
+Resource20=IDA_PACKAGE_MGR
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_THRESHOLD
+Resource22=IDD_DCI_THRESHOLDS
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDA_AGENT_CFG_EDITOR
+Resource24=IDA_SERVER_CFG_EDITOR
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_DCI_THRESHOLDS
+Resource27=IDD_DCI_COLLECTION
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_DATA_QUERY
-Resource32=IDD_GROUP_PROPERTIES
+Resource31=IDD_CREATE_TEMPLATE
+Resource32=IDD_USER_PROPERTIES
 Class29=CUserSelectDlg
-Resource33=IDD_DCI_TRANSFORM
+Resource33=IDD_CREATE_NODE
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDA_DC_EDITOR
-Resource36=IDA_TRAP_EDITOR
+Resource35=IDA_AGENT_CFG_EDITOR
+Resource36=IDA_ACTION_EDITOR
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_SELECT_AGENT_PARAM
+Resource38=IDD_SELECT_INTERNAL_ITEM
 Class33=CGroupPropDlg
-Resource39=IDA_OBJECT_TOOLS_EDITOR
-Resource40=IDD_GRAPH_PROP_DATA
-Resource41=IDD_CREATE_CONTAINER
+Resource39=IDA_DC_EDITOR
+Resource40=IDD_GRAPH_PROP_SETTINGS
+Resource41=IDD_SELECT_ACTION
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDD_OBJECT_NODE_GENERAL
+Resource48=IDD_EDIT_EVENT
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_REMOVE_TEMPLATE
+Resource50=IDD_CHANGE_IP
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDA_GRAPH
+Resource52=IDA_TRAP_EDITOR
 Class48=CObjectSelDlg
-Resource53=IDD_OBJECT_CAPS
-Resource54=IDD_ADD_DCI
+Resource53=IDD_OBJECT_NODE_GENERAL
+Resource54=IDD_OBJECT_COND_DATA
 Class49=CRuleCommentDlg
-Resource55=IDD_EDIT_TRAP_ARG
+Resource55=IDD_EDIT_TRAP
 Class50=CEventSelDlg
-Resource56=IDM_CONTEXT
+Resource56=IDM_VIEW_SPECIFIC
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_SNMP_WALK
+Resource58=IDD_OBJTOOL_COLUMNS
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDM_VIEW_SPECIFIC
+Resource62=IDM_CONTEXT
 Class52=CRuleSeverityDlg
-Resource63=IDD_ACTION_PROPERTIES
+Resource63=IDD_NEW_ACTION
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_NEW_OBJECT_TOOL
+Resource65=IDD_OBJTOOL_GENERAL
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_OBJTOOL_COLUMNS
-Resource70=IDD_CHANGE_PASSWORD
+Resource69=IDD_REMOVE_TEMPLATE
+Resource70=IDD_SUBMAP_BKGND
 Class57=CNewActionDlg
-Resource71=IDD_DCI_SCHEDULE
+Resource71=IDD_SAVE_AGENT_CFG
 Class58=CEditActionDlg
-Resource72=IDR_MAINFRAME
+Resource72=IDD_AGENT_CONFIG
 Class59=CActionSelDlg
-Resource73=IDD_CREATE_TEMPLATE
+Resource73=IDD_CREATE_TG
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_SAVE_AGENT_CFG
+Resource76=IDD_EDIT_IP_SUBNET
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_OBJECT_SECURITY
+Resource77=IDD_OBJECT_GENERAL
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_EDIT_RULE_SEVERITY
-Resource84=IDD_OBJECT_PRESENTATION
+Resource83=IDD_OBJECT_PRESENTATION
+Resource84=IDD_SELECT_EVENT
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_SUBMAP_BKGND
-Resource86=IDD_OBJECT_GENERAL
+Resource85=IDD_SNMP_WALK
+Resource86=IDD_REQUEST_PROCESSING
 Class68=CTrapEditor
-Resource87=IDD_OBJECT_STATUS
-Resource88=IDA_ALARM_BROWSER
-Resource89=IDD_COND_DCI_PROP
+Resource87=IDD_DCI_SCHEDULE
+Resource88=IDA_EPP
+Resource89=IDD_ADD_DCI
 Class69=CDataQueryDlg
-Resource90=IDD_REQUEST_PROCESSING
+Resource90=IDD_OBJECT_CAPS
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_OBJECT_RELATIONS
-Resource93=IDD_OBJECT_VPNC_GENERAL
+Resource92=IDD_OBJECT_NODE_POLL
+Resource93=IDD_CREATE_VPNC
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_EDIT_IP_SUBNET
+Resource94=IDD_OBJECT_VPNC_GENERAL
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDD_EDIT_TRAP
+Resource98=IDD_DATA_QUERY
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDA_PACKAGE_MGR
+Resource129=IDA_GRAPH
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,57 +270,57 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_GRAPH_PROP_SETTINGS
-Resource141=IDD_CREATE_TG
-Resource142=IDD_ABOUTBOX
-Resource143=IDD_EDIT_RULE_COMMENT
-Resource144=IDD_SELECT_OBJECT
-Resource145=IDD_SELECT_INTERNAL_ITEM
-Resource146=IDD_DCI_DATA_EXPORT
-Resource147=IDA_NETMAP
-Resource148=IDD_CREATE_VPNC
-Resource149=IDD_EDIT_VARIABLE
-Resource150=IDD_INPUT_BOX
-Resource151=IDD_OBJECT_NETSRV_GENERAL
-Resource152=IDD_OBJTOOL_GENERAL
-Resource153=IDD_AGENT_CONFIG
-Resource154=IDD_OBJECT_COND_SCRIPT
-Resource155=IDA_SCRIPT_MANAGER
-Resource156=IDD_EDIT_EVENT
-Resource157=IDA_OBJECT_BROWSER
-Resource158=IDD_NEW_ACTION
-Resource159=IDA_MDI_DEFAULT
-Resource160=IDA_AGENT_CONFIG_MANAGER
-Resource161=IDD_CREATE_CONDITION
-Resource162=IDD_CREATE_NETSRV
-Resource163=IDD_SELECT_USER
-Resource164=IDD_EDIT_RULE_ALARM
-Resource165=IDD_SELECT_EVENT
-Resource166=IDD_CP_GENERAL
-Resource167=IDA_EPP
-Resource168=IDD_OBJTOOL_OPTIONS
-Resource169=IDD_DESKTOP_SAVE_AS
-Resource170=IDD_SELECT_ACTION
-Resource171=IDD_LASTVAL_PROP
+Resource140=IDD_DESKTOP_SAVE_AS
+Resource141=IDD_DCI_TRANSFORM
+Resource142=IDA_AGENT_CONFIG_MANAGER
+Resource143=IDD_SELECT_OBJECT
+Resource144=IDD_MIB_BROWSER
+Resource145=IDD_EDIT_TRAP_ARG
+Resource146=IDD_LASTVAL_PROP
+Resource147=IDA_ALARM_BROWSER
+Resource148=IDD_EDIT_VARIABLE
+Resource149=IDD_DCI_DATA_EXPORT
+Resource150=IDD_SELECT_AGENT_PARAM
+Resource151=IDD_CREATE_NETSRV
+Resource152=IDD_OBJECT_STATUS
+Resource153=IDD_COND_DCI_PROP
+Resource154=IDD_OBJECT_COND_GENERAL
+Resource155=IDA_OBJECT_TOOLS_EDITOR
+Resource156=IDD_ABOUTBOX
+Resource157=IDA_MDI_DEFAULT
+Resource158=IDD_CP_GENERAL
+Resource159=IDR_MAINFRAME
+Resource160=IDA_DATA_VIEW
+Resource161=IDD_CHANGE_PASSWORD
+Resource162=IDD_INPUT_BOX
+Resource163=IDD_OBJECT_SECURITY
+Resource164=IDD_EDIT_RULE_SEVERITY
+Resource165=IDD_EDIT_RULE_COMMENT
+Resource166=IDD_EDIT_RULE_ALARM
+Resource167=IDA_OBJECT_BROWSER
+Resource168=IDD_NEW_OBJECT_TOOL
+Resource169=IDD_OBJECT_RELATIONS
+Resource170=IDD_ACTION_PROPERTIES
+Resource171=IDD_GRAPH_PROP_DATA
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_OBJECT_COND_GENERAL
-Resource173=IDD_CREATE_NODE
+Resource172=IDD_CREATE_CONDITION
+Resource173=IDD_CREATE_CONTAINER
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDD_NEW_USER
+Resource174=IDD_SELECT_USER
 Class127=CAddDCIDlg
-Resource175=IDD_OBJECT_NODE_POLL
+Resource175=IDD_OBJECT_NETSRV_GENERAL
 Class128=CCondDCIPropDlg
-Resource176=IDD_SET_PASSWORD
+Resource176=IDD_GROUP_PROPERTIES
 Class129=CAgentConfigMgr
-Resource177=IDA_SERVER_CFG_EDITOR
-Resource178=IDA_ACTION_EDITOR
+Resource177=IDA_LAST_VALUES
+Resource178=IDA_EVENT_EDITOR
 Class130=CAgentCfgDlg
 Class131=CObjectCommentsEditor
-Resource179=IDD_MIB_BROWSER
+Resource179=IDD_THRESHOLD
 Class132=CRuleScriptDlg
 Resource180=IDD_EDIT_RULE_SCRIPT
 
