@@ -16,6 +16,7 @@
 	- Console changed to use UNICODE internally
 	- Event processing policy editor improved
 	- Added confirmation for object deletion
+	- Implemented sorting in object tools tables
 - Server ported to AIX and HP-UX
 - Agent ported to HP-UX
 - Agent for AIX improved
